syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

//todo item represented by a title, a description and a status
message ToDoItem {
    string title = 1;
    string description = 2;
    Status status = 4;
} 

//status can be TODO = 0;INPROGRESS = 1;DONE = 2
enum Status {
    UNKNOWN = 0;
    TODO = 1;
    INPROGRESS = 2;
    DONE = 3;

}

//AddToDo request message
message AddToDoItem {
    ToDoItem toDoItem = 1;
}

//toDoItem with hash
message GetToDoItem {
    string hash =1;
    ToDoItem toDoItem = 2;
}

//DeleteToDo request message
message DeleteToDoItem {
    string hash = 1;
}

//UpdateToDo request message
message UpdateToDoItem {
    string hash = 1;
    Status status = 2;
}

//GetAllToDo request message
message EmptyRequest {
}

//GetAllToDo response 
message AllToDoItems {
    GetToDoItem toDoItems = 1;
    GenericResponse genericResponse = 2;  
}
// this is a generic response to add, put and delete request
message GenericResponse {
    string  status = 1;
    string message = 2;
}

// define todo service
service TodoListService {

    rpc AddToDo (ToDoItem) returns (GenericResponse) {
    option (google.api.http) = {
        post : "/api/todo/v1/add"
        body : "*" 
    };
    }

    rpc DeleteToDo (DeleteToDoItem) returns (GenericResponse) {
        option (google.api.http) = {
            delete : "/api/todo/v1/{hash}"
        };
    }
    
    rpc UpdateToDo (UpdateToDoItem) returns (GenericResponse) {
        option (google.api.http) = {
            put : "/api/todo/v1/{hash}"
            body : "status"
        };
    }
    rpc GetAllToDo (google.protobuf.Empty) returns (stream AllToDoItems) {
        option (google.api.http) = {
            get : "/api/todo/v1/all"
        };
    }
}